--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
         </nav>
         <img src="images/png.png" id="logo">
