--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="gallery-body">
-        <div class="container">
+        <div class="gallery-container">
                 <div class="item item1"><img src="images/ornette_coleman_jazz_saxophonist_bw_102748_1280x720.jpg"></div>
                 <div class="item item2"><img src="images/louie_armstrong_jazz_pipe_bw_101832_1280x720.jpg"></div>
                 <div class="item item3"><img src="images/the_jazz_crusaders_smile_glasses_jackets_beard_7846_1280x720.jpg"></div>
