new navbar + busy with responsiveness

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,20 @@
     <title>Document</title>
 </head>
 <body class="gallery-body">
+</nav> -->
+<div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a href="gallery.html">Gallery</a>
+  </div>
+  
+  <div id="main">
+    <button class="openbtn" onclick="openNav()">&#9776;</button>
+    <h2>Collapsed Sidebar</h2>
+    <p>Content...</p>
+  </div>
         <div class="gallery-container">
                 <div class="item item1"><img src="images/ornette_coleman_jazz_saxophonist_bw_102748_1280x720.jpg"></div>
                 <div class="item item2"><img src="images/louie_armstrong_jazz_pipe_bw_101832_1280x720.jpg"></div>
@@ -20,5 +34,6 @@
                 <div class="item item9"><img src="images/kobby-mendez-V3u2hyLPbaM-unsplash.jpg"></div>
         
             </div>
+            <script src="js/main.js"></script>
 </body>
 </html>
