--- a/index.html
+++ b/index.html
@@ -17,15 +17,28 @@
 </head>
 <body>
     <header>
-        <nav>
+        <!-- <nav>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
-        </nav>
-        <img src="images/png.png" id="logo">
+        </nav> -->
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="gallery.html">Gallery</a>
+          </div>
+          
+          <div id="main">
+            <button class="openbtn" onclick="openNav()">&#9776;</button>
+            <h2>Collapsed Sidebar</h2>
+            <p>Content...</p>
+          </div>
+        <!-- <img src="images/png.png" id="logo"> -->
         <div class="heading">
             <h1>Jazz Legency</h1>
             <p class="head2">Unforgettable souls</p>
@@ -140,6 +153,7 @@
     <footer>
         <p>Designed by Nashville James <span>2019</span></p>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
 
