new navbar + busy with responsiveness

--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="gallery-body">
-</nav> -->
+</nav>
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
